# Project

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/builddewarp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 111.cpp  CMakeLists.txt  C_preprocess.cpp  C_preprocess.hpp  main.cpp  page_dewarp.cpp  page_dewarp.hpp
app/src/main/java/com/example/builddewarp/: CaptureImage.java  ImageToText.java  MainActivity.java  ResultActivity.java
app/src/main/jniLibs/arm64-v8a/: testopt
app/src/main/jniLibs/armeabi-v7a/: testopt
app/src/main/jniLibs/x86/: testopt
app/src/main/jniLibs/x86_64/: testopt
app/src/main/res/layout/: activity_capture_image.xml  activity_main.xml  activity_result.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/example/builddewarp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
tess-two/: build.gradle
tess-two/jni/: Application.mk
